Add rolling data window support to the Metric Object. Update dependencies for it

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ prometheus_client = "*"
 prometheus_api_client = "*"
 tornado = "*"
 fbprophet = "*"
+dateparser = "*"
 
 [requires]
 python_version = "3.6"
