--- a/openshift/oc-deployment-template.yaml
+++ b/openshift/oc-deployment-template.yaml
@@ -121,6 +121,15 @@ objects:
           image: ${APPLICATION_NAME}
           imagePullPolicy: IfNotPresent
           name: ${APPLICATION_NAME}
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /metrics
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
           resources:
             requests:
               memory: 1Gi
