Add a test_model.py script to test a given model on historical data And also log some accuracy metrics to a mlflow server

--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,11 @@ name = "pypi"
 pandas = "*"
 apscheduler = "*"
 prometheus_client = "*"
-prometheus_api_client = "*"
+prometheus_api_client = "==0.0.2b2"
 tornado = "*"
 fbprophet = "*"
 dateparser = "*"
+mlflow = "*"
 
 [requires]
 python_version = "3.6"
