--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
     - pandas
     - apscheduler
     - prometheus_client
-    - prometheus_api_client
+    - prometheus_api_client>=0.0.2b2
     - tornado
     - dateparser
+    - mlflow
