Add oc templates for the test mode Update Dockerfile for the test mode Add set_uid.sh to add the random user generated by openshift to /etc/passwd (needed for mlflow) Update Makefile to include test job deployment methods

--- a/openshift/oc-deployment-template.yaml
+++ b/openshift/oc-deployment-template.yaml
@@ -44,6 +44,10 @@ parameters:
   description: this will create a rolling data window on which the model will be trained. example: if set to 15d will train the model on past 15 days of data
   required: true
   value: "15d"
+- name: APP_FILE
+  description: "python application file name that will be run"
+  value: app.py
+  required: true
 
 objects:
 - apiVersion: v1
@@ -118,6 +122,8 @@ objects:
             value: "${FLT_ROLLING_DATA_WINDOW_SIZE}"
           - name: FLT_DEBUG_MODE
             value: "${FLT_DEBUG_MODE}"
+          - name: APP_FILE
+            value: "${APP_FILE}"
           image: ${APPLICATION_NAME}
           imagePullPolicy: IfNotPresent
           name: ${APPLICATION_NAME}
