--- a/openshift/oc-deployment-template.yaml
+++ b/openshift/oc-deployment-template.yaml
@@ -16,79 +16,45 @@ metadata:
 
 parameters:
 - description: The name for application
-  value: 'prometheus-anomaly-detector-prophet'
+  value: 'prometheus-anomaly-detector-prophet-test'
   name: APPLICATION_NAME
   required: true
 - name: GIT_URI
-  value: https://github.com/AICoE/prometheus-anomaly-detector.git
+  value: "https://github.com/AICoE/prometheus-anomaly-detector.git"
   required: true
 - name: FLT_DEBUG_MODE
-  description: Enable verbose log for debugging
-  value: 'False'
+  description: "Enable verbose log for debugging"
+  value: "False"
   required: false
 - name: FLT_PROM_URL
-  description: url for the prometheus host from where the metrics will be collected
+  description: "url for the prometheus host from where the metrics will be collected"
   required: true
 - name: FLT_PROM_ACCESS_TOKEN
-  description: Oauth token needed to connect to the prometheus host
+  description: "Oauth token needed to connect to the prometheus host"
   required: false
 - name: FLT_METRICS_LIST
-  description: List of metrics (with labels), that will be collected from prometheus and predicted
+  description: "List of metrics (with labels), that will be collected from prometheus and predicted"
   required: true
   value: "thoth_solver_jobs_seconds{instance='metrics-exporter-thoth-frontend-stage.cloud.paas.upshift.redhat.com:80',job='Thoth Metrics (stage)'}"
 - name: FLT_RETRAINING_INTERVAL_MINUTES
-  description: How often should the anomaly detector retrain the model (in minutes)
+  description: "How often should the anomaly detector retrain the model (in minutes)"
   required: true
   value: "15"
-- name: FLT_ROLLING_DATA_WINDOW_SIZE
-  description: this will create a rolling data window on which the model will be trained. example: if set to 15d will train the model on past 15 days of data
+- name: FLT_ROLLING_TRAINING_WINDOW_SIZE
+  description: "this will create a rolling data window on which the model will be trained. example: if set to 15d will train the model on past 15 days of data"
   required: true
-  value: "15d"
+  value: "45d"
 - name: APP_FILE
   description: "python application file name that will be run"
   value: app.py
   required: true
+- name: OC_APP_IMAGE_NAME
+  description: "name of the image that should be deployed"
+  value: "prometheus-anomaly-detector-prophet-image"
+  required: true
+
 
 objects:
-- apiVersion: v1
-  kind: ImageStream
-  metadata:
-    name: ${APPLICATION_NAME}
-    labels:
-      app: ${APPLICATION_NAME}
-  spec:
-    dockerImageRepository: ${APPLICATION_NAME}
-    tags:
-    - name: latest
-    lookupPolicy:
-      local: true
-
-- apiVersion: v1
-  kind: BuildConfig
-  metadata:
-    name: ${APPLICATION_NAME}
-    labels:
-      app: ${APPLICATION_NAME}
-  spec:
-    resources:
-      limits:
-        memory: 4Gi
-        cpu: "2"
-    output:
-      to:
-        kind: ImageStreamTag
-        name: ${APPLICATION_NAME}:latest
-    source:
-      git:
-        uri: ${GIT_URI}
-      type: Git
-    strategy:
-      type: Docker
-    triggers:
-    - imageChange: {}
-      type: ImageChange
-    - type: ConfigChange
-
 - apiVersion: v1
   kind: DeploymentConfig
   metadata:
@@ -118,8 +84,8 @@ objects:
             value: "${FLT_METRICS_LIST}"
           - name: FLT_RETRAINING_INTERVAL_MINUTES
             value: "${FLT_RETRAINING_INTERVAL_MINUTES}"
-          - name: FLT_ROLLING_DATA_WINDOW_SIZE
-            value: "${FLT_ROLLING_DATA_WINDOW_SIZE}"
+          - name: FLT_ROLLING_TRAINING_WINDOW_SIZE
+            value: "${FLT_ROLLING_TRAINING_WINDOW_SIZE}"
           - name: FLT_DEBUG_MODE
             value: "${FLT_DEBUG_MODE}"
           - name: APP_FILE
@@ -127,15 +93,6 @@ objects:
           image: ${APPLICATION_NAME}
           imagePullPolicy: IfNotPresent
           name: ${APPLICATION_NAME}
-          readinessProbe:
-            failureThreshold: 3
-            httpGet:
-              path: /metrics
-              port: 8080
-              scheme: HTTP
-            periodSeconds: 10
-            successThreshold: 1
-            timeoutSeconds: 1
           resources:
             requests:
               memory: 1Gi
@@ -153,7 +110,7 @@ objects:
           - ${APPLICATION_NAME}
         from:
           kind: ImageStreamTag
-          name: ${APPLICATION_NAME}:latest
+          name: ${OC_APP_IMAGE_NAME}:latest
       type: ImageChange
     - type: ConfigChange
 
