--- a/openshift/oc-image-build-template.yaml
+++ b/openshift/oc-image-build-template.yaml
@@ -1,63 +1,64 @@
----
+apiVersion: v1
+kind: Template
+
+labels:
+  application: ${APPLICATION_NAME}
+
+metadata:
+  name: prometheus-anomaly-detector-image-bc
+
+parameters:
+- description: Application name
+  value: 'prometheus-anomaly-detector-prophet-image'
+  name: APPLICATION_NAME
+  required: true
+- name: GIT_URI
+  value: https://github.com/AICoE/prometheus-anomaly-detector.git
+  required: true
+  description: Name of the Python application file to be run during the job.
+- name: LIMIT_CPU
+  value: "1"
+  description: Limit number of CPUs allocated to the container
+- name: LIMIT_MEM
+  value: "2G"
+  description: Limit amount of memory allocated to the container
+
+objects:
 - apiVersion: v1
-  kind: Template
-  labels:
-    application: ${APPLICATION_NAME}
+  kind: ImageStream
   metadata:
-    name: prometheus-anomaly-detector-image-bc
+    name: ${APPLICATION_NAME}
+    labels:
+      app: ${APPLICATION_NAME}
+  spec:
+    dockerImageRepository: ${APPLICATION_NAME}
+    tags:
+    - name: latest
+    lookupPolicy:
+      local: true
 
-  parameters:
-    - description: Application name
-      value: 'prometheus-anomaly-detector-prophet-image'
-      name: APPLICATION_NAME
-      required: true
-    - name: GIT_URI
-      value: https://github.com/AICoE/prometheus-anomaly-detector.git
-      required: true
-      description: Name of the Python application file to be run during the job.
-    - name: LIMIT_CPU
-      value: "1"
-      description: Limit number of CPUs allocated to the container
-    - name: LIMIT_MEM
-      value: "2G"
-      description: Limit amount of memory allocated to the container
-
-  objects:
-    - apiVersion: v1
-      kind: ImageStream
-      metadata:
-        name: ${APPLICATION_NAME}
-        labels:
-          app: ${APPLICATION_NAME}
-      spec:
-        dockerImageRepository: ${APPLICATION_NAME}
-        tags:
-          - name: latest
-        lookupPolicy:
-          local: true
-
-    - apiVersion: v1
-      kind: BuildConfig
-      metadata:
-        name: ${APPLICATION_NAME}
-        labels:
-          app: ${APPLICATION_NAME}
-      spec:
-        resources:
-          limits:
-            memory: 4Gi
-            cpu: "2"
-        output:
-          to:
-            kind: ImageStreamTag
-            name: ${APPLICATION_NAME}:latest
-        source:
-          git:
-            uri: ${GIT_URI}
-          type: Git
-        strategy:
-          type: Docker
-        triggers:
-          - imageChange: {}
-            type: ImageChange
-          - type: ConfigChange
+- apiVersion: v1
+  kind: BuildConfig
+  metadata:
+    name: ${APPLICATION_NAME}
+    labels:
+      app: ${APPLICATION_NAME}
+  spec:
+    resources:
+      limits:
+        memory: 4Gi
+        cpu: "2"
+    output:
+      to:
+        kind: ImageStreamTag
+        name: ${APPLICATION_NAME}:latest
+    source:
+      git:
+        uri: ${GIT_URI}
+      type: Git
+    strategy:
+      type: Docker
+    triggers:
+    - imageChange: {}
+      type: ImageChange
+    - type: ConfigChange
