--- a/environment.yml
+++ b/environment.yml
@@ -10,7 +10,7 @@ dependencies:
       - pandas
       - apscheduler
       - prometheus_client
-      - prometheus_api_client>=0.0.2b2
+      - prometheus_api_client
       - tornado
       - dateparser
       - mlflow
