Run training and tornado server in different processes

--- a/Pipfile
+++ b/Pipfile
@@ -5,9 +5,9 @@ name = "pypi"
 
 [packages]
 pandas = "*"
-apscheduler = "*"
+schedule = "*"
 prometheus_client = "*"
-prometheus_api_client = "==0.0.2b2"
+prometheus_api_client = "*"
 tornado = "*"
 fbprophet = "*"
 dateparser = "*"
