--- a/openshift/oc-deployment-template.yaml
+++ b/openshift/oc-deployment-template.yaml
@@ -120,6 +120,9 @@ objects:
   - apiVersion: v1
     kind: Service
     metadata:
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "8080"
       name: ${APPLICATION_NAME}-service
       labels:
         app: ${APPLICATION_NAME}
