--- a/Pipfile
+++ b/Pipfile
@@ -9,8 +9,10 @@ schedule = "*"
 prometheus_client = "*"
 prometheus_api_client = "*"
 tornado = "*"
+fbprophet = "*"
 dateparser = "*"
 mlflow = "*"
+holidays = "==0.9.12"
 keras = "*"
 numpy = "*"
 scikit-learn = "*"
