--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 pandas
-schedule
-prometheus_client
-prometheus_api_client
-tornado
+schedule==0.6.0
+prometheus-client==0.8.0
+prometheus-api-client==0.4.0
+tornado==6.0.4
 fbprophet
-mlflow
+mlflow==1.10.0
+plotly==4.8.2
 numpy~=1.18.3
 Keras~=2.3.1
 scikit-learn~=0.22.2.post1
