Change python to version 3.8 update dependencies, unpin versions Fix model_lstm to work with latest tensorflow version

--- a/Pipfile
+++ b/Pipfile
@@ -12,11 +12,10 @@ tornado = "*"
 fbprophet = "*"
 dateparser = "*"
 mlflow = "*"
-holidays = "==0.9.12"
 keras = "*"
 numpy = "*"
 scikit-learn = "*"
-tensorflow = "==1.14"
+tensorflow = "*"
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
