--- a/Pipfile
+++ b/Pipfile
@@ -9,10 +9,10 @@ schedule = "*"
 prometheus_client = "*"
 prometheus_api_client = "*"
 tornado = "*"
-fbprophet = "*"
+pystan = "==2.19.1.1"
+prophet = "*"
 dateparser = "*"
 mlflow = "*"
-keras = "*"
 numpy = "*"
 scikit-learn = "*"
 tensorflow = "*"
