Set tensorflow less than 2.5 to fix pipfile lock error with tf 2.5
Squashed commit:
Update requirements and environment.yml for tf 2.5 error

--- a/Pipfile
+++ b/Pipfile
@@ -15,7 +15,7 @@ dateparser = "*"
 mlflow = "*"
 numpy = "*"
 scikit-learn = "*"
-tensorflow = "*"
+tensorflow = ">=2.0, <2.5"
 
 [requires]
 python_version = "3.8"
